# jeedom2ha

./: .env.example  .flake8  .rsync-plugin-deploy.filter  Makefile  README.md  pyproject.toml
.githooks/: pre-commit  pre-push
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/workflows/: pr-governance.yml  test.yml  work.yml
_bmad-output/: project-context.md
_bmad-output/brainstorming/: brainstorming-session-2026-03-12-001.md
_bmad-output/implementation-artifacts/: 1-1-contrat-du-pipeline-mappingresult-a-sous-blocs-bornes-et-ordre-d-evaluation-stable.md  1-1-initialisation-et-communication-php-python.md  1-1-resolver-canonique-du-perimetre-publie.md  1-2-bis-fiabilisation-auto-detection-mqtt-manager-import-force.md  1-2-configuration-et-onboarding-mqtt-auto-manuel.md  1-2-etape-1-l-eligibilite-classe-chaque-equipement-jeedom-dans-une-categorie-stable-avant-tout-mapping.md  1-2-vue-globale-et-synthese-par-piece-sans-recalcul-frontend.md  1-3-diagnostic-d-eligibilite-l-utilisateur-lit-l-etape-1-comme-point-de-blocage-avec-cause-categorisee-et-action-de-scope-applicable.md  1-5-correction-ux-console.md  (+96 more)
docs/: agent-start-checklist.md  cadrage_plugin_jeedom_ha_bmad.docx  cadrage_plugin_jeedom_ha_bmad.md  ci.md  dev-deploy.md  git-strategy.md  index.md  local-git-guardrails.md
plugin_info/: configuration.php  info.json  install.php  packages.json
scripts/: ci-local.sh  deploy-to-box.sh  git-preflight.sh  start-story-worktree.sh  test-changed.sh
tests/: README.md  __init__.py  conftest.py  test_php_export_diagnostic_coherence.php  test_php_published_scope_relay.php  test_php_story_4_5_home_signals.php  test_php_topology_extraction.php  test_runtime_bootstrap_startup.php  test_runtime_imports.py
(+214 files in other folders)
