[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jeedom2ha-daemon"
version = "0.1.0"
description = "Python daemon for the Jeedom to Home Assistant bridge"
requires-python = ">=3.9"
dependencies = [
    "paho-mqtt",
    "jeedomdaemon",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
