[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jeedom2ha-daemon"
version = "0.1.0"
description = "Python daemon for the Jeedom to Home Assistant bridge"
requires-python = ">=3.9"
dependencies = [
    "aiohttp",
    "paho-mqtt",
    "jeedomdaemon",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "flake8",
]

[tool.pytest.ini_options]
testpaths = ["tests", "resources/daemon/tests"]
pythonpath = [".", "resources/daemon"]
asyncio_mode = "auto"
